# nyaml

./: .pre-commit-config.yaml  404.html  AUTHORS  CITATION.cff  README.md  dev-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: check_citation.yaml  draft-pdf.yml  publish.yaml  pylint.yaml  pytest.yaml
dev_tools/docs/: nxdl.py
dev_tools/nyaml2nxdl/: nyaml2nxdl_forward_tools.py
dev_tools/tests/: test_nyaml2nxdl.py
docs/: explanations.md  how_to_guide.md  index.md  references.md  tutorials.md
docs/stylesheets/: extra.css
explanations/: index.html
how_to_guide/: index.html
nyaml/: cli.py  comment_collector.py  helper.py  nxdl2nyaml.py  nyaml2nxdl.py  nyaml2nxdl_backward_tools.py  nyaml2nxdl_forward_tools.py  nyaml2nxdl_helper.py
paper/: paper.bib  paper.md
references/: index.html
src/nyaml/: __init__.py  cli.py  comment_collector.py  helper.py  nxdl2nyaml.py  nyaml2nxdl.py
tests/: test_nyaml2nxdl.py
tests/data/: NXattributes.yaml  NXcanSAS.nxdl.xml  NXcanSAS.yaml  NXcomment_yaml2nxdl.yaml  NXdimensionsType.nxdl.xml  NXdimensionsType.yaml  NXentry.nxdl.xml  NXfit.yaml  NXnametype.yaml  NXtest_links.yaml  Prohibited_nameType_attribute.yaml  Prohibited_nameType_field.yaml  Prohibited_nameType_group.yaml  Ref_NXattributes.nxdl.xml  Ref_NXcanSAS.nxdl.xml  Ref_NXcomment.yaml  Ref_NXcomment_yaml2nxdl.nxdl.xml  Ref_NXdimensionsType.nxdl.xml  Ref_NXdimensionsType.yaml  Ref_NXellips.nxdl.xml  Ref_NXellipsometry-docCheck.nxdl.xml  Ref_NXentry.nxdl.xml  Ref_NXentry.yaml  Ref_NXentry_Licence_modified.yaml  Ref_NXmytests.nxdl.xml  Ref_NXnametype.nxdl.xml  Ref_NXnested_symbols.nxdl.xml  Ref_NXtest_links.nxdl.xml  Ref_nameType.nxdl.xml  Ref_nameType.yaml  aaaNXcanSAS.nxdl.xml  dim_keyword.yaml  dimensions.nxdl.xml  dimensions_parsed.yaml  dimensions_with_wrong_attribs.nxdl.xml  doc_nxdl2yaml.nxdl.xml  doc_yaml2nxdl.yaml  enumerations.nxdl.xml  enumerations.yaml  enumerations_nxdl2yaml.nxdl.xml  (+12 more)
tests/data/nxdl2yaml/: NXdimensionsType.nxdl.xml  Ref_NXdimensionsType.yaml  allowed_nameType.nxdl.xml  enumerations.nxdl.xml  ref_allowed_nameType.yaml  ref_enumerations.yaml
tests/data/yaml2nxdl/: NXattributes.yaml  NXcomment.yaml  NXdimensionsType.yaml  NXfit.yaml  Ref_NXattributes.nxdl.xml  Ref_NXcomment.nxdl.xml  Ref_NXdimensionsType.nxdl.xml  Ref_NXellipsometry-docCheck.nxdl.xml  Ref_NXfit.nxdl.xml  allowed_nameType.yaml  enumerations.yaml  prohibited_nameType.yaml  ref_allowed_nameType.nxdl.xml  ref_enumerations.nxdl.xml
tutorials/: index.html
